@@ -11,6 +11,7 @@ Date: ????
     - Setup the hidden surface
     - Put the multiplier code in a shared file
     - Setup the combinator that maps how much each quality is worth
+    - Setup initial hidden entity positions
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2024. 11. 26
